--- a/src/components/ToDoList/ToDoList.module.css
+++ b/src/components/ToDoList/ToDoList.module.css
@@ -1,15 +1,36 @@
 .listTasks {
   margin-top: 40px;
   padding: 24px 28px;
-  background-color: #ffffff;
-  box-shadow: 0 4px 30px 2px rgba(14, 0, 34, 0.9),
-    inset 0 0 3px rgb(255, 255, 255);
+  background: rgba(255, 255, 255, 0.15);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25),
+    inset 0 0 6px rgba(255, 255, 255, 0.3);
   width: 939px;
   height: 380px;
   border-radius: 40px;
-  overflow-y: auto;
+  overflow-y: hidden;
   overflow-x: hidden;
+  position: relative;
 }
+
+.listTasks::after {
+  content: "";
+  position: absolute;
+  top: -30%;
+  left: -30%;
+  width: 160%;
+  height: 160%;
+  background: radial-gradient(
+    circle at top left,
+    rgba(255, 255, 255, 0.4),
+    transparent 70%
+  );
+  pointer-events: none;
+  opacity: 0.25;
+}
+
 .taskItem {
   width: 883px;
   display: flex;
@@ -52,17 +73,22 @@
 /* Іконки */
 .deleteSvg,
 .editSvg {
-  width: 24px;
-  height: 24px;
+  width: 30px;
+  height: 30px;
+}
+.deleteSvg:hover,
+.editSvg:hover {
+  width: 35px;
+  height: 35px;
 }
 
-/* Кольори по UX */
-.deleteButton:hover {
-  background-color: rgba(239, 68, 68, 0.15); /* червоний */
-  transform: scale(1.1);
-}
-
+.deleteButton:hover,
 .editButton:hover {
-  background-color: rgba(59, 130, 246, 0.15); /* синій */
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25),
+    inset 0 0 6px rgba(255, 255, 255, 0.3);
+  border-radius: 50px;
   transform: scale(1.1);
 }
